test/tests/compiler/6_statements_and_conditional_expressions/valid/binary_condition.plx
pub fn main(none) i32 {
    if 1 + 2 == 3 {
        return 5
    }
}
