test/tests/compiler/6_statements_and_conditional_expressions/invalid_parse/extra_credit/kw_label.plx
pub fn main(none) i32 {
    label return
    return 0
}
